--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-PUBLIC_IP=192.168.4.85
+PUBLIC_IP=change me
 SECRET=change_me
 RETHINKDB_PORT_28015_TCP=tcp://rethinkdb:28015
 STATION_NAME=nuc
+WEB_PORT=change me
